syntax = "proto3";

option csharp_namespace = "GrpcMessage";

package message;

service Message {
  rpc GetAllStudents (GetAllStudentsRequest) returns (stream GetAllStudentsResponse);
  rpc GetStudent (GetStudentRequest) returns (stream GetStudentResponse);
  rpc AddStudent (AddStudentRequest) returns (AddStudentResponse);
  rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentResponse);
  rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentResponse);


  rpc GetMessage (GetMessageRequest) returns (GetMessageResponse);
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc GetAllMessages(GetAllMessagesRequest) returns (stream GetAllMessagesResponse);
}

message GetAllStudentsRequest {}
message GetAllStudentsResponse 
{
    int64 id = 1;
    string UserName = 2;
    string FirstName = 3;
    string SecondName = 4;
    string LastName = 5;
    string School = 6;
    repeated PhoneNo PhoneNumber = 7;
}

message GetStudentRequest 
{
    int64 id = 1;
}
message GetStudentResponse{
    int64 id = 1;
    string UserName = 2;
    string FirstName = 3;
    string SecondName = 4;
    string LastName = 5;
    string School = 6;
}

message AddStudentRequest 
{
    int64 id = 1;
    string UserName = 2;
    string FirstName = 3;
    string SecondName = 4;
    string LastName = 5;
    string School = 6;
    repeated PhoneNo PhoneNumber = 7;
}
message AddStudentResponse{}

message PhoneNo
{
    string PhoneNumber = 1;
}

message UpdateStudentRequest 
{
    int64 id = 1;
    string UserName = 2;
    string FirstName = 3;
    string SecondName = 4;
    string LastName = 5;
    string School = 6;
}
message UpdateStudentResponse {}

message DeleteStudentRequest 
{
    int64 id = 1;
}
message DeleteStudentResponse{}



message GetAllMessagesRequest {}

message GetAllMessagesResponse
{
    int64 id = 1;
    string from = 2;
    string to = 3;
    string message = 4;
}

message GetMessageRequest 
{
    int64 id = 1;
}

message GetMessageResponse
{
    GetAllMessagesResponse response = 1;
}

message SendMessageRequest 
{
    int64 id = 1;
    string from = 2;
    string to = 3;
    string message = 4;
}

message SendMessageResponse
{
    int64 id = 1;
}

